Finished Login-Register API. Working on Harbor and Admin.

--- a/AdminDashboard/src/styles/Dashboard.css
+++ b/AdminDashboard/src/styles/Dashboard.css
@@ -32,7 +32,8 @@ body {
   grid-column: 1 / -1;
   margin: 0; /* No space on top */
   box-sizing: border-box;
-  height: 50px;
+  height: 60px;
+  font-size: 30px;
 }
 
 .box {
